# bme688

./: CHANGELOG.md  README.md  pyproject.toml
src/bme688/: __init__.py  cli.py
src/bme688/compensate/: __init__.py
src/bme688/device/: __init__.py  control.py  device.py  reading.py
src/bme688/registers/: __init__.py  calib.py  chip_id.py  ctrl_hum.py  ctrl_meas.py  field_data.py  reset.py
